add enter aipkey function

--- a/templates/nasa.html
+++ b/templates/nasa.html
@@ -8,7 +8,7 @@
 <a href="{{ url_for('previous') }}">Previous</a>
 <a href="{{ url_for('next') }}">next</a>
 <form action = "{{ url_for('receive_data')}}" method="post">
-  enter your api key: <input type="text" name="apiKey"><br>
+  enter your api key: <input type="text" name="apikey"><br>
   <input type='submit' value="submit">
 </form>
 <h1> {{title}}</h1>
